gccida/c2/purge_addressof
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/purge_addressof/src/function.c:3898:4: error: expected ';' after expression
rtx x; // [rsp+8h] [rbp-C0h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/purge_addressof/src/function.c:3898:5: error: use of undeclared identifier 'x'
rtx x; // [rsp+8h] [rbp-C0h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/purge_addressof/src/function.c:3899:4: error: expected ';' after expression
rtx data[2]; // [rsp+10h] [rbp-B8h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/purge_addressof/src/function.c:3899:5: error: use of undeclared identifier 'data'
rtx data[2]; // [rsp+10h] [rbp-B8h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/purge_addressof/src/function.c:3901:1: error: unknown type name 'hash_table_0'; did you mean 'hash_table'?
hash_table_0 v11; // [rsp+28h] [rbp-A0h] BYREF 
^~~~~~~~~~~~
hash_table
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/purge_addressof/src/hashtable.h:40:19: note: 'hash_table' declared here
typedef struct ht hash_table;
                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/purge_addressof/src/function.c:3905:1: error: use of undeclared identifier 'data'
data[0] = ( rtx)&v11; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/purge_addressof/src/function.c:3905:17: error: invalid operands to binary expression ('rtx' (aka 'struct rtx_def *') and 'hash_table' (aka 'struct ht'))
data[0] = ( rtx)&v11; 
          ~~~~~~^~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/purge_addressof/src/function.c:3910:1: error: use of undeclared identifier 'x'
x = insns; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/purge_addressof/src/function.c:3918:1: error: use of undeclared identifier 'data'
data[1] = rtx; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/purge_addressof/src/function.c:3919:16: error: use of undeclared identifier 'x'
for_each_rtx( &x, insns_for_mem_walk, data); 
               ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/purge_addressof/src/function.c:3919:39: error: use of undeclared identifier 'data'
for_each_rtx( &x, insns_for_mem_walk, data); 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/purge_addressof/src/function.c:3920:7: error: use of undeclared identifier 'x'
rtx = x; 
      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/purge_addressof/src/function.c:3923:1: error: use of undeclared identifier 'x'
x = rtx; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/purge_addressof/src/function.c:3937:29: error: expected expression
v5 = asm_noperands( *( rtx *)&v1[2]); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/purge_addressof/src/function.c:3938:33: error: expected expression
if ( !purge_addressof_1( ( rtx *)&v1[2], v1, v5 > 0, 0, &v11) ) 
                                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/purge_addressof/src/function.c:3940:33: error: expected expression
if ( !purge_addressof_1( ( rtx *)v1[3].fld, 0LL, 0, 0, &v11) ) 
                                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/purge_addressof/src/function.c:3942:29: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
for ( v6.rtwint = ( __int64)v1[3].fld[0]; ; v6.rtwint = ( __int64)data[0][1] ) 
                            ^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/purge_addressof/src/function.c:3942:67: error: use of undeclared identifier 'data'
for ( v6.rtwint = ( __int64)v1[3].fld[0]; ; v6.rtwint = ( __int64)data[0][1] ) 
                                                                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/purge_addressof/src/function.c:3944:1: error: use of undeclared identifier 'data'
data[0] = v6.rtx; 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/purge_addressof/src/obj/function.o] Error 1
